alignment fix

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ ul li {
 
 .connect {
     margin-top: 10px;  /* Move the connect heading closer to the image */
-    padding-right: 162px;
+    padding-right: 291px;
     text-align: left;
 }
 
@@ -157,6 +157,6 @@ ul li {
 
     .connect {
         padding-left: 0; /* Remove any extra left padding */
-        padding-right: 85px; /* Ensure it doesn't push content off-screen */
+        padding-right: 193px; /* Ensure it doesn't push content off-screen */
     }
 }
